# okfile

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SITE_UPLOAD_DESIGN.md  SKILL.md  SKILL.skillhub.club.md  SKILL.skills-hub.md  SKILL.theskills.directory.md  admin-worker.js  cdp.bat  hub.md  index.html  okfile-upload-pitfalls.md  package-lock.json  package.json  pyproject.toml  schema.sql  skills-lock.json  upload.html  worker-app.js  wrangler.admin.deploy.jsonc  wrangler.admin.toml  wrangler.sites.deploy.jsonc  wrangler.sites.jsonc  wrangler.toml
.agents/skills/okfile/: .gitignore  README.md  SECURITY.md  SITE_UPLOAD_DESIGN.md  SKILL.skillhub.club.md  SKILL.theskills.directory.md  pyproject.toml  r2-cors.json  wrangler.admin.toml
.agents/skills/okfile/.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.agents/skills/okfile/docs/: README.md  devto-agent-delivery-publish-file-or-site-test-guide.md
.agents/skills/okfile/okfile/: SKILL.md
.deploy-admin/: admin-worker.js  d1-check.sql  d1-set-publish-origin.sql
.github/: pull_request_template.md
.publish-cli-122/: _worker.js  index.html  upload.html  worker-app.js
dist_okfile/: okfile-1.2.0-py3-none-any.whl
docs/: AI-Agent文件发布平台对比.md  README.md  aliyun-workbuddy-agent-file-site-publish-test-guide.md  devto-agent-delivery-publish-file-or-site-test-guide.md  okfile-burn-after-read-guide.md  tencent-workbuddy-agent-publish-file-or-site.md
downloads/: okfile-1.2.1-py3-none-any.whl  okfile-1.2.2-py3-none-any.whl  okfile-1.2.3-py3-none-any.whl
okfile.egg-info/: PKG-INFO  (+3 more)
(+10 files in other folders)
